--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -12,6 +12,21 @@
     padding-right: 50px;
 }
 
+.foodbank-info-item {
+    width: 100%;
+    height: 80vh;
+    backdrop-filter: blur(10px);
+    background-color: rgba(255, 255, 255, 1);
+    border-radius: 20px;
+    box-shadow: 0px 5px 5px 0px rgba(210, 210, 210, 0.5), inset -20px -20px 16px 0px rgba(210, 210, 210, 0.6), inset 0px 11px 28px 0px rgb(255, 255, 255);
+    padding: 5px;
+    display: flex;
+    align-items:center;
+    padding: 5px;
+    padding-top: 50px;
+    margin-top: 10px;
+}
+
 .list-image{
     display:block;
     width: 10%;
@@ -21,5 +36,13 @@
 }
 
 h1{
+    color: white;
+}
+
+h2{
+    color: white;
+}
+
+h3{
     color: white;
 }
