--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,74 +1,21 @@
-.navbar {
-  background-color: #060b26;
-  height: 80px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.menu-bars {
-  margin-left: 2rem;
-  font-size: 2rem;
-  background: none;
-}
-
-.nav-menu {
-  background-color: #060b26;
-  width: 250px;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  position: fixed;
-  top: 0;
-  left: -100%;
-  transition: 850ms;
-  z-index: 1500
-}
-
-.nav-menu.active {
-  left: 0;
-  transition: 350ms;
-  z-index: 1500
-}
-
-.nav-text {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 8px 0px 8px 16px;
-  list-style: none;
-  height: 60px;
-}
-
-.nav-text a {
+.active-link {
+  background-color: #1c1952;
+  color: white;
   text-decoration: none;
-  color: #f5f5f5;
-  font-size: 18px;
-  width: 95%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  padding: 0 16px;
-  border-radius: 4px;
 }
 
-.nav-text a:hover {
-  background-color: #1a83ff;
+.active-menu {
+  background-color: #5048e573;
+  color: black;
+  text-decoration: none;
 }
 
-.nav-menu-items {
-  width: 100%;
+.link-item {
+  color: white;
+  text-decoration: none;
 }
 
-.navbar-toggle {
-  background-color: #060b26;
-  width: 100%;
-  height: 80px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-span {
-  margin-left: 16px;
+.menu-item {
+  color: black;
+  text-decoration: none;
 }
